--- a/Back-end/secao-5-arquitetura-de-software/trybecar/package.json
+++ b/Back-end/secao-5-arquitetura-de-software/trybecar/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon --ignore coverage src/server.js",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx"
+    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx",
+    "test": "mocha tests/**/*.js --exit",
+    "test:coverage": "nyc --all --include src/models --include src/services --include src/controllers mocha tests/unit/**/*.js --exit"
   },
   "repository": {
     "type": "git",
@@ -20,8 +22,13 @@
   },
   "homepage": "https://github.com/tryber/trybecar#readme",
   "devDependencies": {
+    "chai": "4.3.4",
+    "chai-http": "4.3.0",
     "eslint-config-trybe-backend": "^2.1.0",
-    "nodemon": "^2.0.22"
+    "mocha": "8.4.0",
+    "nodemon": "^2.0.22",
+    "nyc": "15.1.0",
+    "sinon": "11.1.1"
   },
   "dependencies": {
     "camelize": "^1.0.1",
