--- a/Back-end/secao-5-arquitetura-de-software/trybecar/package.json
+++ b/Back-end/secao-5-arquitetura-de-software/trybecar/package.json
@@ -7,7 +7,7 @@
     "start": "node src/server.js",
     "dev": "nodemon --ignore coverage src/server.js",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js, .jsx",
-    "test": "mocha tests/**/*.js --exit",
+    "test": "mocha tests/**/*.js --watch",
     "test:coverage": "nyc --all --include src/models --include src/services --include src/controllers mocha tests/unit/**/*.js --exit"
   },
   "repository": {
@@ -28,7 +28,8 @@
     "mocha": "8.4.0",
     "nodemon": "^2.0.22",
     "nyc": "15.1.0",
-    "sinon": "11.1.1"
+    "sinon": "11.1.1",
+    "sinon-chai": "^3.7.0"
   },
   "dependencies": {
     "camelize": "^1.0.1",
